# shadowmark

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-workflow.yml
src/: __main__.py  embedder.py  exceptions.py  extractor.py  indices.py
src/embedding/: blind_dwt_dct_channel_embedder.py  rgb_watermark_embedder.py
src/extraction/: blind_dwt_dct_channel_extractor.py  rgb_watermark_extractor.py
src/randomization/: permutation_indices_selector.py
src/transformation/: bipolar.py  correlation.py  dct.py  dwt.py  image.py  zigzag.py
tests/embedding/: test_blind_dwt_dct_channel_embedder.py  test_rgb_watermark_embedder.py
tests/extraction/: test_blind_dwt_dct_channel_extractor.py  test_rgb_watermark_extractor.py
tests/randomization/: test_permutation_indices_selector.py
tests/stub/: channel_embedder_stub.py  channel_extractor_stub.py  indices_selector_stub.py
tests/transformation/: test_bipolar.py  test_correlation.py  test_dct.py  test_dwt.py  test_zigzag.py
